syntax = "proto3";

option csharp_namespace = "VNCOverlayGrpcService.Services";

package vnc_overlay;

// The service definition.
service VNCOverlayControl {
  rpc ShowOverlay (Empty) returns (OperationStatus);
  rpc HideOverlay (Empty) returns (OperationStatus);
  rpc UpdateOverlayConfiguration (Configuration) returns (OperationStatus);
}

// Message definitions.
message Empty {}

message Configuration {
  string config = 1;
}

message OperationStatus {
  bool success = 1;
  string message = 2;
}