using Google.Protobuf.WellKnownTypes;
using Grpc.Core;
using System.Buffers;

namespace VNCOverlayGrpcService.Services
{
    public class VNCOverlayControlService : VNCOverlayControl.VNCOverlayControlBase
    {
        public override Task<OperationStatus> ShowOverlay(Empty request, ServerCallContext context)
        {
            // Logic to show the overlay
            return Task.FromResult(new OperationStatus { Success = true, Message = "Overlay shown" });
        }

        public override Task<OperationStatus> HideOverlay(Empty request, ServerCallContext context)
        {
            // Logic to hide the overlay
            return Task.FromResult(new OperationStatus { Success = true, Message = "Overlay hidden" });
        }

        public override Task<OperationStatus> UpdateOverlayConfiguration(Configuration request, ServerCallContext context)
        {
            // Logic to update the configuration
            return Task.FromResult(new OperationStatus { Success = true, Message = "Configuration updated" });
        }
    }
}
